@@ -1,5 +1,5 @@
 /*
- * Copyright 2017-2021 B2i Healthcare Pte Ltd, http://b2i.sg
+ * Copyright 2017-2022 B2i Healthcare Pte Ltd, http://b2i.sg
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,7 +23,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.b2international.snowowl.core.events.util.Promise;
-import com.google.common.collect.ImmutableList;
 
 /**
  * @since 5.11
@@ -42,7 +41,7 @@ public interface IdentityProvider {
 		
 		@Override
 		public User auth(String username, String password) {
-			return new User(username, ImmutableList.of(Role.ADMINISTRATOR));
+			return new User(username, List.of(Permission.ADMIN));
 		}
 		
 		@Override
@@ -50,7 +49,7 @@ public interface IdentityProvider {
 			// generate fake Users for given usernames with admin permission
 			final List<User> users = usernames.stream()
 					.limit(limit)
-					.map(username -> new User(username, ImmutableList.of(Role.ADMINISTRATOR)))
+					.map(username -> new User(username, List.of(Permission.ADMIN)))
 					.collect(Collectors.toList());
 			return Promise.immediate(new Users(users, limit, usernames.size()));
 		}
@@ -98,7 +97,7 @@ public interface IdentityProvider {
 	 * Authenticates a username and password.
 	 * @param username - a username to use for authentication
 	 * @param password - the user's password to use for authentication
-	 * @return an authenticated {@link User} and its {@link Role}s or <code>null</code> if the username or password is incorrect.
+	 * @return an authenticated {@link User} and its permissions or <code>null</code> if the username or password is incorrect.
 	 */
 	User auth(String username, String password);
 	
